--- a/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
@@ -105,8 +105,13 @@
     <Reference Include="AutoMapper">
       <HintPath>..\dependencies\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="Db4objects.Db4o">
+    <Reference Include="Db4objects.Db4o, Version=7.12.156.14667, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\dependencies\Db4objects.Db4o.dll</HintPath>
+    </Reference>
+    <Reference Include="Db4objects.Db4o.CS, Version=7.12.156.14667, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\dependencies\Db4objects.Db4o.CS.dll</HintPath>
     </Reference>
     <Reference Include="MvcTurbine">
       <HintPath>..\dependencies\MvcTurbine.dll</HintPath>
