--- a/Boris.Utils/Boris.Utils.Mvc/Boris.Utils.Mvc.csproj
+++ b/Boris.Utils/Boris.Utils.Mvc/Boris.Utils.Mvc.csproj
@@ -57,6 +57,7 @@
       <HintPath>..\dependencies\Ninject.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -79,6 +80,7 @@
   <ItemGroup>
     <Compile Include="Filters\LoggingFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Attributes\IsbnAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
@@ -101,6 +103,10 @@
     <ProjectReference Include="..\Boris.Utils.Logging\Boris.Utils.Logging.csproj">
       <Project>{3484159B-CFAC-44D3-A670-0DA875F44BF8}</Project>
       <Name>Boris.Utils.Logging</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Boris.Utils.Strings\Boris.Utils.Strings.csproj">
+      <Project>{460BCD98-0AD7-4536-9DFB-B38D33E1BF13}</Project>
+      <Name>Boris.Utils.Strings</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
