Using google jquery and jquery UI libs rather then self-hosted ones. Added async autocomplete to search beek

--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Boris.BeekProject.Guis.Web.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Boris.BeekProject.Guis.Web.csproj
@@ -71,6 +71,7 @@
     <Content Include="content\css\beek.css" />
     <Content Include="content\css\search.css" />
     <Content Include="content\css\forms.css" />
+    <Content Include="content\js\search.js" />
     <Content Include="content\pics\placeholders\coverArt.png" />
     <Content Include="Global.asax" />
     <Content Include="views\account\LogIn.aspx" />
