Updated NLogger config Added deploy instructions for AppDAta/db4o General wanking around to get paths to work with the virtual directory on the shared hosting. Failing miserably. Hate IIS configurationthings.
Signed-off-by: boriscallens <boris.callens+github@gmail.com>

--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Boris.BeekProject.Guis.Web.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Boris.BeekProject.Guis.Web.csproj
@@ -41,6 +41,8 @@
     <PublishDatabases>false</PublishDatabases>
     <FilesToIncludeForPublish>OnlyFilesToRunTheApp</FilesToIncludeForPublish>
     <ExcludeGeneratedDebugSymbol>true</ExcludeGeneratedDebugSymbol>
+    <PackageAsSingleFile>false</PackageAsSingleFile>
+    <ExcludeApp_Data>true</ExcludeApp_Data>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Web.Mvc, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -126,6 +128,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="views\beek\DisplayTemplates\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App_Data\db4o\beekRepository.db4o" />
+    <None Include="App_Data\db4o\userRepository.db4o" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
