--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
@@ -8,9 +8,9 @@
     \Windows\Microsoft.Net\Framework\v2.x\Config 
 -->
 <configuration>
-  <configSections>
-    <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
-  </configSections>
+	<configSections>
+		<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+	</configSections>
 	<appSettings>
 		<add key="userRepository.path.db4o" value="App_Data\db4o\userRepository.db4o"/>
 		<add key="beekRepository.path.db4o" value="App_Data\db4o\beekRepository.db4o"/>
@@ -25,7 +25,7 @@
             affects performance, set this value to true only 
             during development.
     -->
-    <trust level="Full"/>
+		<trust level="Full"/>
 		<compilation debug="true" targetFramework="4.0">
 			<assemblies>
 				<add assembly="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -54,17 +54,17 @@
         </customErrors>
     -->
 		<pages controlRenderingCompatibilityVersion="3.5" clientIDMode="AutoID">
-      <namespaces>
-        <add namespace="Microsoft.Web.Mvc"/>
-        <add namespace="System.Web.Mvc"/>
-        <add namespace="System.Web.Mvc.Ajax"/>
-        <add namespace="System.Web.Mvc.Html"/>
-        <add namespace="System.Web.Routing"/>
-        <add namespace="Boris.BeekProject.Guis.Shared.ViewData"/>
-        <add namespace="Boris.Utils.Html.Helpers"/>
-        <add namespace="Boris.BeekProject.Guis.Shared.Controllers"/>
-        <add namespace="Boris.BeekProject.Guis.Shared.ViewModels"/>
-      </namespaces>
+			<namespaces>
+				<add namespace="Microsoft.Web.Mvc"/>
+				<add namespace="System.Web.Mvc"/>
+				<add namespace="System.Web.Mvc.Ajax"/>
+				<add namespace="System.Web.Mvc.Html"/>
+				<add namespace="System.Web.Routing"/>
+				<add namespace="Boris.BeekProject.Guis.Shared.ViewData"/>
+				<add namespace="Boris.Utils.Html.Helpers"/>
+				<add namespace="Boris.BeekProject.Guis.Shared.Controllers"/>
+				<add namespace="Boris.BeekProject.Guis.Shared.ViewModels"/>
+			</namespaces>
 		</pages>
 		<httpHandlers>
 			<add verb="*" path="*.mvc" validate="false" type="System.Web.Mvc.MvcHttpHandler, System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -102,27 +102,16 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
-
-  <!--This configuration will archive a file at the beginning of each day and will use rolling file naming, 
+	<!--This configuration will archive a file at the beginning of each day and will use rolling file naming, 
   so log file from the previous day can always be found in archives//log.0.txt, 
   log from two days ago is in archives//log.1.txt and so on. 
   This configuration will keep at most 7 archive files, so logs older than one week will be automatically deleted.-->
-  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <targets>
-      <target name="file" xsi:type="File"
-          layout="${longdate} ${logger} ${message}"
-          fileName="${basedir}/logs/logfile.txt"
-          archiveFileName="${basedir}/archives/log.{#}.txt"
-          archiveEvery="Day"
-          archiveNumbering="Rolling"
-          maxArchiveFiles="7"
-          concurrentWrites="true"
-          keepFileOpen="false"
-          encoding="iso-8859-2" />
-    </targets>
-
-    <rules>
-      <logger name="*" minlevel="Debug" writeTo="file" />
-    </rules>
-  </nlog>
+	<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+		<targets>
+			<target name="file" xsi:type="File" layout="${longdate} ${logger} ${message}" fileName="${basedir}/logs/logfile.txt" archiveFileName="${basedir}/archives/log.{#}.txt" archiveEvery="Day" archiveNumbering="Rolling" maxArchiveFiles="7" concurrentWrites="true" keepFileOpen="false" encoding="iso-8859-2"/>
+		</targets>
+		<rules>
+			<logger name="*" minlevel="Debug" writeTo="file"/>
+		</rules>
+	</nlog>
 </configuration>
